# extrator-provas-portugues

./: .env.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  README.md  download_missing_ccs.py  pyproject.toml  run_preview.sh  scratch_categorize.py  scratch_fix_latex.py  scratch_test_pt.py  upload_log.txt
.claude/skills/: exames.md
docs/: database.md  mcp_server.md
migrations/: 001_create_questoes.sql
migrations/v2/: 001_schema_v2.sql  002_patch_grupo_constraint.sql  003_portugues_fields.sql  003_rls.sql  004_respostas_corretas.sql
scratch/: detail_criteria.py  fix_criterios.py  fix_criterios_json.py  fix_data.py  fix_questions.py  fix_questions_final.py  fix_review.py  fix_review_json.py  mcp_helper.py  merge_json_v2.py  merge_json_v3.py  merge_review.py  migrate_cotacoes.py  reupload_images_only.py  run_validate.py  sync_review_main.py  test_pymupdf_extract.py  test_reextract_images.py
src/exames_pipeline/: __init__.py  cc_extract.py  cc_fallback.py  cc_merge.py  cc_ocr_lint.py  cc_preview.py  cc_validate.py  cli.py  config.py  mcp_server.py  mineru_runner.py  module_backup.py  module_categorize.py  module_cotacoes.py  module_doc_audit.py  module_micro_lint.py  module_ocr_repair.py  module_preprocess.py  module_preview.py  module_pymupdf_extract.py  module_reextract_images.py  module_structure.py  module_triage.py  module_validate.py  overlay.py  pdf_parser.py  schemas.py  supabase_client.py  supabase_preview.py  utils.py  workspace_state.py
tests/: test_fonte_validation.py
