[project]
name = "extrator-provas-portugues"
version = "0.1.0"
description = "Pipeline dedicada a extrair, categorizar e armazenar questões de provas de Português."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pymupdf>=1.23",
    "Pillow>=10.0",
]

[project.scripts]
exames-pipeline = "exames_pipeline.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
