[project]
name = "exames-nacionais-pipeline"
version = "0.1.0"
description = "Pipeline para extrair, categorizar e armazenar questoes de exames nacionais de Portugal."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pymupdf>=1.23",
    "Pillow>=10.0",
]

[project.scripts]
exames-pipeline = "exames_pipeline.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
